[package]
name = "pdf_encoding"
version = "0.2.0"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Font related encodings"
homepage = "https://github.com/pdf-rs/encoding"
repository = "https://github.com/pdf-rs/encoding"
readme = "README.md"
include = [
    "agl-aglfn/glyphlist.txt",
    "src",
    "build.rs",
    "README.md",
]
exclude = [
    "encodings"
]

[dependencies]
lazy_static = "1.4"